accessibility contrast correction

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2878,7 +2878,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #20C997;
+			background-color: #510080;
 			color: #c8ece9;
 		}
 
